<resources>
    <string name="app_name">MemoryGame</string>
    <string name="start_new_game">New Game</string>
    <string name="time_up">Time is up!</string>
    <string name="high_score">High score</string>
    <string name="points">Points</string>
    <string name="difficulty">Select difficulty</string>
    <string name="high_scores_list">High Scores</string>
    <string name="easy">Easy (3 minutes)</string>
    <string name="medium">Medium (2 minutes)</string>
    <string name="hard">Hard (1 minute)</string>

</resources>
